# src/routes/categories.routes.ts
@@ -1,24 +1,27 @@
 import { Router } from "express";
 import multer from "multer"; // yarn add multer e yarn add @types/multer
 
-import createCategoryController from "../modules/cars/usesCases/createCategory";
-import { importCategoryController } from "../modules/cars/usesCases/importCategory";
-import { listCategoriesController } from "../modules/cars/usesCases/listCategories";
+import { CreateCategoryController } from "../modules/cars/usesCases/createCategory/CreateCategoryController";
+import { ImportCategoryController } from "../modules/cars/usesCases/importCategory/ImportCategoryController";
+import { ListCategoriesController } from "../modules/cars/usesCases/listCategories/ListCategoriesController";
 
 const categoriesRoutes = Router();
 const upload = multer({
   dest: "./tmp",
 });
-categoriesRoutes.post("/", (request, response) => {
-  return createCategoryController().handle(request, response);
-});
 
-categoriesRoutes.get("/", (request, response) => {
-  return listCategoriesController.handle(request, response);
-});
+const createCategoryController = new CreateCategoryController();
+const importCategoryController = new ImportCategoryController();
+const listCategoriesController = new ListCategoriesController();
 
-categoriesRoutes.post("/import", upload.single("file"), (request, response) => {
-  return importCategoryController.handle(request, response);
-});
+categoriesRoutes.post("/", createCategoryController.handle);
+
+categoriesRoutes.get("/", listCategoriesController.handle);
+
+categoriesRoutes.post(
+  "/import",
+  upload.single("file"),
+  importCategoryController.handle
+);
 
 export { categoriesRoutes };
